--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<a href="http://chrome-gest-new.cf/">
-<a href="http://tada-0167.ml/">
-<a href="https://pi-mannokanzumee.ml/">
+<a class="learn-more-button" href="https://pi-mannokanzumee.ml/"><h2>ぴぃまん<h2></a>
+<a class="learn-more-button" href="">http://tada-0167.ml/<a><h2>ただ<h2></a>
+<a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2>くろむ<h2></a>
+  <link rel="stylesheet" href="index.css">
