--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="learn-more-button" href="https://pi-mannokanzumee.ml/"><h2>ぴぃまん<h2></a>
-<a class="learn-more-button" href="">http://tada-0167.ml/<a><h2>ただ<h2></a>
-<a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2>くろむ<h2></a>
+<a class="learn-more-button" href="https://pi-mannokanzumee.ml/"><h2><p>ぴぃまん<p><h2></a>
+<a class="learn-more-button" href="">http://tada-0167.ml/<a><h2><p>ただ<p><h2></a>
+<a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2><p>くろむ<p><h2></a>
   <link rel="stylesheet" href="index.css">
