--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <title>まとめぴぃまん</title>
-<a class="learn-more-button" href="https://pi-mannokanzumee.ml/"><h2><p>ぴぃまん<p><h2></a>
-<a class="learn-more-button" href="http://tada-0167.ml/"><h2><p>ただ<p><h2></a>
-<a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2><p>くろむ<p><h2></a>
-  <link rel="stylesheet" href="index.css">
-<title>まとめぴぃまん</title>
+
+<a class="learn-more-button" href="https://pi-mannokanzumee.ml/"><h2><p>ぴぃまんのホームページ<p><h2></a>
+<a class="learn-more-button" href="http://tada-0167.ml/"><h2><p>TADA非公式サイト<p><h2></a>
+<a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2><p>ChromeGest<p><h2></a>
+<a class="learn-more-button" href="http://yamiagari.ml/"><h2><p>病み上がりに作ったサイト<p><h2></a>
+<a class="learn-more-button" href="https://yamiagari.ml/RiruXP_Make-it-a-Quote/"><h2><p>RiruXP_Make-it-a-Quote<p><h2></a>
+<a class="learn-more-button" href="http://sub.pi-mannokanzumee.ml/"><h2><p>newぴぃまん<p><h2></a>  
+<a class="learn-more-button" href="https://pi-mannokanzumee.ml/イルスたち"><h2><p>ゥイルス配布<p><h2></a>
+  
+  <!--　w --> 
+   <link rel="stylesheet" href="index.css">
+  <!--　w --> 
+  <meta property="og:url" content="https://matome.ml/" />
+<meta property="og:type" content="Server" />
+<meta property="og:title" content="matome" />
+<meta property="og:description" content="matome" />
+<meta property="og:site_name" content="matome" />
+<!--　w --> 
