--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <a class="learn-more-button" href="http://tada-0167.ml/"><h2><p>TADA非公式サイト<p><h2></a>
 <a class="learn-more-button" href="http://chrome-gest-new.cf/"><h2><p>ChromeGest<p><h2></a>
 <a class="learn-more-button" href="http://yamiagari.ml/"><h2><p>病み上がりに作ったサイト<p><h2></a>
-<a class="learn-more-button" href="https://yamiagari.ml/RiruXP_Make-it-a-Quote/"><h2><p>RiruXP_Make-it-a-Quote<p><h2></a>
+<a class="learn-more-button" href="http://matome.ml/sub.html"><h2><p>Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="http://sub.pi-mannokanzumee.ml/"><h2><p>newぴぃまん<p><h2></a>  
 <a class="learn-more-button" href="https://pi-mannokanzumee.ml/イルスたち"><h2><p>ゥイルス配布<p><h2></a>
-<a class="learn-more-button" href="https://yamiagari.ml/web_archive/"><h2><p>archive_RiruXP<p><h2></a>
   <!--　w --> 
    <link rel="stylesheet" href="index.css">
   <!--　w --> 
