--- a/sub.html
+++ b/sub.html
@@ -2,7 +2,7 @@
 
 
 
-<a class="learn-more-button" href="https://yamiagari.ml/Naniha_Make-it-a-Quote/"><h2><p>Naniha_Make-it-a-Quote<p><h2></a>
+<a class="learn-more-button" href="https://yamiagari.ml/Nanihaha_Make-it-a-Quote/"><h2><p>Nanihaha_Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="https://yamiagari.ml/Yaasa_Make-it-a-Quote/"><h2><p>Yaasa_Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="https://yamiagari.ml/RiruXP_Make-it-a-Quote/"><h2><p>RiruXP_Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="https://yamiagari.ml/web_archive/"><h2><p>archive_RiruXP<p><h2></a>
