--- a/sub.html
+++ b/sub.html
@@ -5,8 +5,11 @@
 <a class="learn-more-button" href="https://yamiagari.ml/Nanihaha_Make-it-a-Quote/"><h2><p>Nanihaha_Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="https://yamiagari.ml/Yaasa_Make-it-a-Quote/"><h2><p>Yaasa_Make-it-a-Quote<p><h2></a>
 <a class="learn-more-button" href="https://yamiagari.ml/RiruXP_Make-it-a-Quote/"><h2><p>RiruXP_Make-it-a-Quote<p><h2></a>
-<a class="learn-more-button" href="https://yamiagari.ml/web_archive/"><h2><p>archive_RiruXP<p><h2></a>
-
+<a class="learn-more-button" href="https://yamiagari.ml/web_archive/"><h2><p>archive<p><h2></a>
+<a class="learn-more-button" href="https://yamiagari.ml/hentai_iso-DL/tukurikata.htm"><h2><p>変態iso作り方的な<p><h2></a>
+<a class="learn-more-button" href="https://yamiagari.ml/hentai_iso-DL/index.html"><h2><p>yamiagari.ml - 変態iso<p><h2></a>
+  
+  
   <!--　w --> 
    <link rel="stylesheet" href="index.css">
   <!--　w --> 
